make sure the table-header content don't wrap and stay on the same line

--- a/src/assets/scss/_table-header.scss
+++ b/src/assets/scss/_table-header.scss
@@ -11,7 +11,8 @@
     display: flex;
     align-items: center;
     height: $btn-height;
-    
+    white-space: nowrap;
+
     &:not(.with-page-size-dropdown) {
       .displaying-text,
       .total-count-text {
